Add catalog and favorites functionality; implement CatalogName and FavoritePage components, enhance MarketPage with navigation to favorites, and update SearchBar for improved search experience.

--- a/app/src/main/res/drawable/ic_chat.xml
+++ b/app/src/main/res/drawable/ic_chat.xml
@@ -4,31 +4,10 @@
     android:viewportWidth="22"
     android:viewportHeight="22">
   <path
-      android:pathData="M1,21V2.212C1,1.545 1.5,1 2.111,1H19.889C20.5,1 21,1.545 21,2.212V16.758C21,17.424 20.5,17.97 19.889,17.97H3.778L1,21Z"
+      android:pathData="M6,8H15M6,12H15M6,16H11M21,11C21,16.523 16.523,21 11,21H1V11C1,5.477 5.477,1 11,1C16.523,1 21,5.477 21,11Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#6F6F6F"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M6.556,5.849H15.445"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#6F6F6F"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M6.556,9.485H15.445"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#6F6F6F"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M6.556,13.121H11"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#6F6F6F"
+      android:strokeColor="#038175"
       android:strokeLineCap="round"/>
 </vector>
